# kindle

./: .gitignore  README.md  audit_coverage.json  coverage.json  coverage_audit.json  coverage_final.json  coverage_report.json  final_coverage.json  final_metrics.json  pyproject.toml  verification_report.md
.github/workflows/: ci.yml  quality-gates.yml  release.yml  security.yml
docs/: DESIGN.md  GRILL_REDESIGN.md
src/kindle/: __init__.py  agent.py  artifacts.py  cli.py  config.py  graph.py  guardrails.py  state.py  ui.py
src/kindle/stages/: __init__.py  _helpers.py  architect.py  dev.py  grill.py  package.py  qa.py  research.py
tests/: conftest.py  constants.py  test_agent.py  test_artifacts.py  test_cli.py  test_config.py  test_graph.py  test_guardrails.py  test_init.py  test_state.py  test_ui.py
tests/stages/: test_architect.py  test_dev.py  test_grill.py  test_package.py  test_qa.py  test_research.py
