[project]
name = "kindle"
version = "0.1.0"
description = "AI-powered application factory — describe what you want, the machine builds it."
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=13.0.0",
    "langgraph>=0.4.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kindle = "kindle.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pip-audit>=2.7.0",
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=kindle --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C901", "UP", "B", "S", "PT", "SIM", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "E501", "F841", "RUF059", "SIM117", "PT011", "RUF012"]
"src/kindle/stages/qa.py" = ["S603", "S607"]
"src/kindle/stages/package.py" = ["S603", "S607"]
"src/kindle/stages/dev.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["claude_agent_sdk.*", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true
